добавляет амперсант в бекдроп и футер

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
         </section>
     </main>
         <footer class="footer-section">
-            <div class="footer container">
+            <div class="container">
                 <div class="footer-inf">
                     <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
         
