--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 </main>
         <!-- Футер -->
 <footer class="footer-section"> 
-  <div class="footer container">
+  <div class="container">
     <div class="footer-inf">
     <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
   
